readability fix
added background for paragraphs to make them more readable

--- a/style/baseStyle.less
+++ b/style/baseStyle.less
@@ -100,7 +100,12 @@ article
 	{
 		/*width: 100%;*/
 		text-align: right;
+		color: #FDFDFD;
 	}
+	
+	background: rgba(0,0,0,0.5);
+	padding: 20px;
+	margin-top: 40px;
 }
 
 .date
@@ -446,6 +451,12 @@ div.ic_thumbnails
 	width:40%;
 	float:left;
 	margin-left:30px;
+	margin-top:40px;
+	background: rgba(0,0,0,0.5);
+	
+	h1 {
+		margin: 0 20px;
+	}
 }
 
 div.ic_slideshow
@@ -484,7 +495,7 @@ ul
 #projectDescription p, #projectDescription h3
 {
 	font-size: 18px;
-
+	margin: 20px;
 }
 
 iframe, iframe.videoLink
